All the documentation can be found at https://tuleap-documentation.readthedocs.org/en/latest/soap/tracker.html

2.0.5 - Tuleap 5.12
    == /!\ Backward compatibility restore /!\ ==
    * Restore updateArtifact and addArtifact behaviour at 2.0.3 for 'value' field of FieldValue type.
      It allows again to use strings and no longer understand ids.

    However, the new recommended way to manage list values (Selectbox, MultiSelectBox, CheckBox and OpenList) is
    to use the new field 'bind_value' of FieldValue type.

    * WSDL update: FieldValue 'field_value' as a new choice 'ArrayOfTrackerFieldBindValue'.

2.0.4 - Tuleap 5.12
    == /!\ Backward compatibility break /!\ ==
    * updateArtifact method no longer expects labels for binded list fields, but their numerical ids.

    == New behaviour ==
    * updateArtifact method expects for every list fields the id of the value(s), and not the value(s) label(s). For None value, the id is always 100.
    * getTrackerFields method exports now for a list binded on users the complete list of users with their ids
    * WSDL type 'TrackerFieldBindValue' does not export the field id

2.0.3 - Tuleap 5.9
    * Bug fix: rename TrackerWorkflowRules type to TrackerWorkflowRuleArray

2.0.2 - Tuleap 5.9
    * Enhancement: 'Artifact' type now contains a 'cross_references' field with artifact cross references

2.0.1 - Tuleap 5.9
    * Enhancement: add getArtifactComments() method

2.0 - Tuleap 5.8
    == /!\ Backward compatibility break /!\ ==
    * On type ArtifactFieldValue field_value changes from 'string' to complex type
      FieldValue
      -> impacted methods getArtifact, getArtifacts, addArtifact, updateArtifact

    == New behaviour ==
    * addArtifact and updateArtifact can now create and delete file attachments.
      See details in https://tuleap.net/wiki/index.php?pagename=HowToUseTuleapSoapApi&group_id=101

    == New methods ==
    * getTrackerReports
    * getArtifactsFromReportId
    * getArtifactAttachmentChunk